cmake_minimum_required(VERSION 3.10)
project(CPP_THREAD)

set(CMAKE_CXX_STANDARD 17)

add_executable(thread thread.cpp)
add_executable(simple_condition_variable simple_condition_variable.cpp) 
add_executable(complex_condition_variable complex_condition_variable.cpp)
add_executable(spurious_wakeup spurious_wakeup.cpp)
add_executable(spurious_wakeup2 spurious_wakeup2.cpp)
add_executable(demo1 demo1.cpp)
add_executable(memory_order memory_order.cpp)
add_executable(order_of_evaluation order_of_evaluation.cpp)
add_executable(order_of_memory order_of_memory.cpp)
if(UNIX)
target_link_libraries(cpp_thread pthread)
endif(UNIX)